--- a/product2.html
+++ b/product2.html
@@ -825,7 +825,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container py-xl-4 py-lg-2">
 			<!-- tittle heading -->
 			<h3 class="tittle-w3l text-center mb-lg-5 mb-sm-4 mb-3">
-				<span>T</span>v
+				<span>A</span>cessories
 				<span>&</span>
 				<span>A</span>ppliances</h3>
 			<!-- //tittle heading -->
@@ -1564,7 +1564,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="row">
 							<div class="col-sm-7 offer-name">
 								<h6>Smooth, Rich & Loud Audio</h6>
-								<h4 class="mt-2 mb-3">Branded Headphones</h4>
+								<h4 class="mt-2 mb-3">Beats Solo3</h4>
 								<p>Sale up to 25% off all in store</p>
 							</div>
 							<div class="col-sm-5 offerimg-w3l">
@@ -1578,7 +1578,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="row ">
 							<div class="col-sm-7 offer-name">
 								<h6>A Bigger Phone</h6>
-								<h4 class="mt-2 mb-3">Smart Phones 5</h4>
+								<h4 class="mt-2 mb-3">Iphone 15</h4>
 								<p>Free shipping order over $100</p>
 							</div>
 							<div class="col-sm-5 offerimg-w3l">
