--- a/index.html
+++ b/index.html
@@ -1163,11 +1163,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<span class="product-new-top">New</span>
 										<div class="item-info-product text-center border-top mt-4">
 											<h4 class="pt-1">
-												<a href="single.html">Whirlpool 245</a>
+												<a href="single.html">HomePod</a>
 											</h4>
 											<div class="info-product-price my-2">
-												<span class="item_price">$230.00</span>
-												<del>$280.00</del>
+												<span class="item_price">$249.99</span>
+												<del>$299.99</del>
 											</div>
 											<div class="snipcart-details top_brand_home_details item_add single-item hvr-outline-out">
 												<form action="#" method="post">
@@ -1175,8 +1175,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 														<input type="hidden" name="cmd" value="_cart" />
 														<input type="hidden" name="add" value="1" />
 														<input type="hidden" name="business" value=" " />
-														<input type="hidden" name="item_name" value="Whirlpool 245" />
-														<input type="hidden" name="amount" value="230.00" />
+														<input type="hidden" name="item_name" value="HomePod" />
+														<input type="hidden" name="amount" value="249.99" />
 														<input type="hidden" name="discount_amount" value="1.00" />
 														<input type="hidden" name="currency_code" value="USD" />
 														<input type="hidden" name="return" value=" " />
@@ -1201,11 +1201,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										</div>
 										<div class="item-info-product text-center border-top mt-4">
 											<h4 class="pt-1">
-												<a href="single.html">BPL Washing Machine</a>
+												<a href="single.html">AirPods 2nd Generation</a>
 											</h4>
 											<div class="info-product-price my-2">
-												<span class="item_price">$180.00</span>
-												<del>$200.00</del>
+												<span class="item_price">$89.99</span>
+												<del>$129.99</del>
 											</div>
 											<div class="snipcart-details top_brand_home_details item_add single-item hvr-outline-out">
 												<form action="#" method="post">
@@ -1213,8 +1213,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 														<input type="hidden" name="cmd" value="_cart" />
 														<input type="hidden" name="add" value="1" />
 														<input type="hidden" name="business" value=" " />
-														<input type="hidden" name="item_name" value="BPL Washing Machine" />
-														<input type="hidden" name="amount" value="180.00" />
+														<input type="hidden" name="item_name" value="AirPods 2nd Generation" />
+														<input type="hidden" name="amount" value="89.99" />
 														<input type="hidden" name="discount_amount" value="1.00" />
 														<input type="hidden" name="currency_code" value="USD" />
 														<input type="hidden" name="return" value=" " />
@@ -1239,11 +1239,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										</div>
 										<div class="item-info-product text-center border-top mt-4">
 											<h4 class="pt-1">
-												<a href="single.html">Microwave Oven</a>
+												<a href="single.html">Beats Solo3</a>
 											</h4>
 											<div class="info-product-price my-2">
-												<span class="item_price">$199.00</span>
-												<del>$299.00</del>
+												<span class="item_price">$199.99</span>
+												<del>$249.99</del>
 											</div>
 											<div class="snipcart-details top_brand_home_details item_add single-item hvr-outline-out">
 												<form action="#" method="post">
@@ -1251,8 +1251,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 														<input type="hidden" name="cmd" value="_cart" />
 														<input type="hidden" name="add" value="1" />
 														<input type="hidden" name="business" value=" " />
-														<input type="hidden" name="item_name" value="Microwave Oven" />
-														<input type="hidden" name="amount" value="199.00" />
+														<input type="hidden" name="item_name" value="Beats Solo3" />
+														<input type="hidden" name="amount" value="199.99" />
 														<input type="hidden" name="discount_amount" value="1.00" />
 														<input type="hidden" name="currency_code" value="USD" />
 														<input type="hidden" name="return" value=" " />
