--- a/index.html
+++ b/index.html
@@ -1030,11 +1030,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										</div>
 										<div class="item-info-product text-center border-top mt-4">
 											<h4 class="pt-1">
-												<a href="single.html">Sony 80 cm (32 inches)</a>
+												<a href="single.html">Amazon Firestick 3rd Generation</a>
 											</h4>
 											<div class="info-product-price my-2">
-												<span class="item_price">$320.00</span>
-												<del>$340.00</del>
+												<span class="item_price">$19.99</span>
+												<del>$39.99</del>
 											</div>
 											<div class="snipcart-details top_brand_home_details item_add single-item hvr-outline-out">
 												<form action="#" method="post">
@@ -1042,8 +1042,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 														<input type="hidden" name="cmd" value="_cart" />
 														<input type="hidden" name="add" value="1" />
 														<input type="hidden" name="business" value=" " />
-														<input type="hidden" name="item_name" value="Sony 80 cm (32 inches)" />
-														<input type="hidden" name="amount" value="320.00" />
+														<input type="hidden" name="item_name" value="Amazon Firestick 3rd Generation" />
+														<input type="hidden" name="amount" value="19.99" />
 														<input type="hidden" name="discount_amount" value="1.00" />
 														<input type="hidden" name="currency_code" value="USD" />
 														<input type="hidden" name="return" value=" " />
